// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders default <CategoryMenu /> 1`] = `
.c0 {
  display: flex;
  flex-flow: row wrap;
  justify-content: center;
  width: 100%;
  text-transform: uppercase;
}

<form
  className="c0"
/>
`;

exports[`renders default <Form /> 1`] = `
.c0 {
  display: flex;
  flex-flow: row wrap;
  justify-content: center;
  max-width: 90%;
}

<form
  className="c0"
/>
`;

exports[`renders default <FormAlt /> 1`] = `
.c0 {
  display: flex;
  flex-flow: row wrap;
  justify-content: center;
  max-width: 90%;
}

.c1 {
  padding: 1rem;
}

<form
  className="c0 c1"
/>
`;
